--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "everyvoter",
   "version": "1.0.0",
-  "repository": "git+https://github.com/ofa/everyvoter.git",
-  "author": "OFA",
+  "repository": "git+https://github.com/everyvoter/everyvoter.git",
   "dependencies": {
     "@mdi/font": "^2.3.54",
     "babel-core": "^6.26.0",
